--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+agora-token-builder==1.0.0
 asgiref==3.4.1
 click==8.1.3
 colorama==0.4.5
 distlib==0.3.4
+Django==4.0.1
 filelock==3.6.0
 Flask==2.1.3
 gunicorn==20.1.0
@@ -31,4 +33,3 @@ virtualenv-clone==0.5.7
 virtualenvwrapper==4.8.4
 Werkzeug==2.2.0
 whitenoise==6.2.0
-gunicorn
